# backend/docs/swagger/swagger.json
@@ -25,7 +25,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/user-management_internal_models.User"
+                                "$ref": "#/definitions/User"
                             }
                         }
                     }
@@ -47,7 +47,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user-management_internal_models.UserCreateRequest"
+                            "$ref": "#/definitions/UserCreateRequest"
                         }
                     }
                 ],
@@ -55,7 +55,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/user-management_internal_models.User"
+                            "$ref": "#/definitions/User"
                         }
                     },
                     "400": {
@@ -102,7 +102,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user-management_internal_models.User"
+                            "$ref": "#/definitions/User"
                         }
                     },
                     "404": {
@@ -139,7 +139,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user-management_internal_models.UserUpdateRequest"
+                            "$ref": "#/definitions/UserUpdateRequest"
                         }
                     }
                 ],
@@ -147,7 +147,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user-management_internal_models.User"
+                            "$ref": "#/definitions/User"
                         }
                     },
                     "400": {
@@ -215,7 +215,7 @@
         }
     },
     "definitions": {
-        "user-management_internal_models.User": {
+        "User": {
             "type": "object",
             "required": [
                 "email",
@@ -226,44 +226,55 @@
             ],
             "properties": {
                 "createdAt": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2025-03-27T10:23:51.495798-05:00"
                 },
                 "department": {
-                    "description": "Department the user belongs to, alphanumeric with spaces allowed\nmaxLength: 255\nexample: Engineering",
+                    "description": "Department\n\t@maxLength\t255\n\t@example\tEngineering",
                     "type": "string",
-                    "maxLength": 255
+                    "maxLength": 255,
+                    "example": "Engineering"
                 },
                 "email": {
-                    "description": "Email address of the user, must be a valid email format\nrequired: true\nmaxLength: 255\nformat: email\nexample: john.doe@example.com",
+                    "description": "Email address\n\t@maxLength\t255\n\t@format\t\temail\n\t@example\tjohn.doe@example.com",
                     "type": "string",
-                    "maxLength": 255
+                    "format": "email",
+                    "maxLength": 255,
+                    "example": "john.doe@example.com"
                 },
                 "firstName": {
-                    "description": "The first name of the user, must be provided, minimum 1 character, can have spaces\nrequired: true\nminLength: 1\nmaxLength: 255\npattern: ^[a-zA-Z0-9]+$\nexample: John",
+                    "description": "First name\n\t@minLength\t1\n\t@maxLength\t255\n\t@pattern\t^[\\p{L}\\p{N}]+$\n\t@example\tJohn",
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 1
+                    "minLength": 1,
+                    "example": "John"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "lastName": {
-                    "description": "The last name of the user, must be provided, minimum 1 character, can have spaces\nrequired: true\nminLength: 1\nmaxLength: 255\npattern: ^[a-zA-Z0-9]+$\nexample: Doe",
+                    "description": "Last name\n\t@minLength\t1\n\t@maxLength\t255\n\t@pattern\t^[\\p{L}\\p{N}]+$\n\t@example\tDoe",
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 1
+                    "minLength": 1,
+                    "example": "Doe"
                 },
                 "updatedAt": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2025-03-27T10:23:51.495798-05:00"
                 },
                 "userName": {
-                    "description": "The username for the user, must be provided, minimum 4 alphanumeric characters\nrequired: true\nminLength: 4\nmaxLength: 255\npattern: ^[a-zA-Z0-9]+$\nexample: johndoe",
+                    "description": "The username\n\t@minLength\t4\n\t@maxLength\t255\n\t@pattern\t^[a-zA-Z0-9]+$\n\t@example\tjohndoe",
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 4
+                    "minLength": 4,
+                    "example": "johndoe"
                 },
                 "userStatus": {
-                    "description": "Status of the user (A=Active, I=Inactive, T=Terminated)\nrequired: true\nenum: A,I,T\nexample: A",
+                    "description": "User Status\n\t@enum\t\tA,I,T\n\t@example\tA",
                     "enum": [
                         "A",
                         "I",
@@ -271,13 +282,14 @@
                     ],
                     "allOf": [
                         {
-                            "$ref": "#/definitions/user-management_internal_models.UserStatus"
+                            "$ref": "#/definitions/UserStatus"
                         }
-                    ]
+                    ],
+                    "example": "A"
                 }
             }
         },
-        "user-management_internal_models.UserCreateRequest": {
+        "UserCreateRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -288,35 +300,41 @@
             ],
             "properties": {
                 "department": {
-                    "description": "Department the user belongs to, alphanumeric with spaces allowed\nmaxLength: 255\nexample: Engineering",
+                    "description": "Department\n\t@maxLength\t255\n\t@example\tEngineering",
                     "type": "string",
-                    "maxLength": 255
+                    "maxLength": 255,
+                    "example": "Engineering"
                 },
                 "email": {
-                    "description": "Email address of the user, must be a valid email format\nrequired: true\nmaxLength: 255\nformat: email\nexample: john.doe@example.com",
+                    "description": "Email address\n\t@maxLength\t255\n\t@format\t\temail\n\t@example\tjohn.doe@example.com",
                     "type": "string",
-                    "maxLength": 255
+                    "format": "email",
+                    "maxLength": 255,
+                    "example": "john.doe@example.com"
                 },
                 "firstName": {
-                    "description": "The first name of the user, must be provided, minimum 1 character, can have spaces\nrequired: true\nminLength: 1\nmaxLength: 255\npattern: ^[a-zA-Z0-9]+$\nexample: John",
+                    "description": "First name\n\t@minLength\t1\n\t@maxLength\t255\n\t@pattern\t^[\\p{L}\\p{N}]+$\n\t@example\tJohn",
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 1
+                    "minLength": 1,
+                    "example": "John"
                 },
                 "lastName": {
-                    "description": "The last name of the user, must be provided, minimum 1 character, can have spaces\nrequired: true\nminLength: 1\nmaxLength: 255\npattern: ^[a-zA-Z0-9]+$\nexample: Doe",
+                    "description": "Last name\n\t@minLength\t1\n\t@maxLength\t255\n\t@pattern\t^[\\p{L}\\p{N}]+$\n\t@example\tDoe",
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 1
+                    "minLength": 1,
+                    "example": "Doe"
                 },
                 "userName": {
-                    "description": "The username for the user, must be provided, minimum 4 alphanumeric characters\nrequired: true\nminLength: 4\nmaxLength: 255\npattern: ^[a-zA-Z0-9]+$\nexample: johndoe",
+                    "description": "The username\n\t@minLength\t4\n\t@maxLength\t255\n\t@pattern\t^[a-zA-Z0-9]+$\n\t@example\tjohndoe",
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 4
+                    "minLength": 4,
+                    "example": "johndoe"
                 },
                 "userStatus": {
-                    "description": "Status of the user (A=Active, I=Inactive, T=Terminated)\nrequired: true\nenum: A,I,T\nexample: A",
+                    "description": "User Status\n\t@enum\t\tA,I,T\n\t@example\tA",
                     "enum": [
                         "A",
                         "I",
@@ -324,13 +342,14 @@
                     ],
                     "allOf": [
                         {
-                            "$ref": "#/definitions/user-management_internal_models.UserStatus"
+                            "$ref": "#/definitions/UserStatus"
                         }
-                    ]
+                    ],
+                    "example": "A"
                 }
             }
         },
-        "user-management_internal_models.UserStatus": {
+        "UserStatus": {
             "type": "string",
             "enum": [
                 "A",
@@ -343,7 +362,7 @@
                 "UserStatusTerminated"
             ]
         },
-        "user-management_internal_models.UserUpdateRequest": {
+        "UserUpdateRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -354,35 +373,41 @@
             ],
             "properties": {
                 "department": {
-                    "description": "Department the user belongs to, alphanumeric with spaces allowed\nmaxLength: 255\nexample: Engineering",
+                    "description": "Department\n\t@maxLength\t255\n\t@example\tEngineering",
                     "type": "string",
-                    "maxLength": 255
+                    "maxLength": 255,
+                    "example": "Engineering"
                 },
                 "email": {
-                    "description": "Email address of the user, must be a valid email format\nrequired: true\nmaxLength: 255\nformat: email\nexample: john.doe@example.com",
+                    "description": "Email address\n\t@maxLength\t255\n\t@format\t\temail\n\t@example\tjohn.doe@example.com",
                     "type": "string",
-                    "maxLength": 255
+                    "format": "email",
+                    "maxLength": 255,
+                    "example": "john.doe@example.com"
                 },
                 "firstName": {
-                    "description": "The first name of the user, must be provided, minimum 1 character, can have spaces\nrequired: true\nminLength: 1\nmaxLength: 255\npattern: ^[a-zA-Z0-9]+$\nexample: John",
+                    "description": "First name\n\t@minLength\t1\n\t@maxLength\t255\n\t@pattern\t^[\\p{L}\\p{N}]+$\n\t@example\tJohn",
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 1
+                    "minLength": 1,
+                    "example": "John"
                 },
                 "lastName": {
-                    "description": "The last name of the user, must be provided, minimum 1 character, can have spaces\nrequired: true\nminLength: 1\nmaxLength: 255\npattern: ^[a-zA-Z0-9]+$\nexample: Doe",
+                    "description": "Last name\n\t@minLength\t1\n\t@maxLength\t255\n\t@pattern\t^[\\p{L}\\p{N}]+$\n\t@example\tDoe",
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 1
+                    "minLength": 1,
+                    "example": "Doe"
                 },
                 "userName": {
-                    "description": "The username for the user, must be provided, minimum 4 alphanumeric characters\nrequired: true\nminLength: 4\nmaxLength: 255\npattern: ^[a-zA-Z0-9]+$\nexample: johndoe",
+                    "description": "The username\n\t@minLength\t4\n\t@maxLength\t255\n\t@pattern\t^[a-zA-Z0-9]+$\n\t@example\tjohndoe",
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 4
+                    "minLength": 4,
+                    "example": "johndoe"
                 },
                 "userStatus": {
-                    "description": "Status of the user (A=Active, I=Inactive, T=Terminated)\nrequired: true\nenum: A,I,T\nexample: A",
+                    "description": "User Status\n\t@enum\t\tA,I,T\n\t@example\tA",
                     "enum": [
                         "A",
                         "I",
@@ -390,9 +415,10 @@
                     ],
                     "allOf": [
                         {
-                            "$ref": "#/definitions/user-management_internal_models.UserStatus"
+                            "$ref": "#/definitions/UserStatus"
                         }
-                    ]
+                    ],
+                    "example": "A"
                 }
             }
         }
